# RLogSU

./: CMakeLists.txt  main.cpp  readme.md
include/RLogSU/: error_handler.hpp  graph.hpp  graph_appearance.hpp  logger.hpp  logger_appearance.hpp  logger_impl.hpp
log/: Logfile.html
src/: dummy.cpp  graph.cpp  logger.cpp  logger_appearance.hpp  logger_impl.cpp  logger_impl.hpp
